getComputedStyle for border-width is not implemented. https://bugs.webkit.org/show_bug.cgi?id=74635

Reviewed by Tony Chang.

Source/WebCore:

Implement getComputedStyle for border-width.

Test: fast/css/getComputedStyle/getComputedStyle-border-width.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Implement a test to cover getComputedStyle for border-width.

* fast/css/getComputedStyle/getComputedStyle-border-width-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-border-width.html: Added.


Canonical link: https://commits.webkit.org/91460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103096 268f45cc-cd09-0410-ab3c-d52691b4dbfc